# kuroo

./: AUTHORS  CMakeLists.txt  ChangeLog  README  TODO
pics/: CMakeLists.txt
po/: CMakeLists.txt  Messages.sh  de.po  es.po  fr.po  it.po  kuroo.pot  nb.po  pl.po  ru.po
src/: CMakeLists.txt  common.h  kuroo.cpp  kuroo.desktop  kuroo.h  kurooiface.h  kurooinit.cpp  kurooinit.h  kurooui.rc  kurooview.cpp  kurooview.h  main.cpp  message.cpp  message.h  messagebase.ui  singleton.h  statusbar.cpp  statusbar.h  systemtray.cpp  systemtray.h
src/config/: configdialog.cpp  configdialog.h  kurooconfig.kcfg  options1.ui  options2.ui  options3.ui  options4.ui  settings.kcfgc
src/core/: LoadPackageHardMaskJob.h  LoadPackageKeywordsJob.h  LoadPackageUseJob.h  LoadPackageUserHardMaskJob.h  LoadPackageUserUnMaskJob.h  cacheportagejob.cpp  cacheportagejob.h  categorieslistview.cpp  categorieslistview.h  dependatom.cpp  dependatom.h  dependencyview.cpp  dependencyview.h  emerge.cpp  emerge.h  etcupdate.cpp  etcupdate.h  filewatcher.cpp  filewatcher.h  global.cpp  global.h  inspectorbase.ui  package.h  packagebase.h  packageinspector.cpp  packageinspector.h  packageitem.cpp  packageitem.h  packagelistitem.cpp  packagelistitem.h  packagelistmodel.cpp  packagelistmodel.h  packageversion.cpp  packageversion.h  portagedb.cpp  portagedb.h  portagefiles.cpp  portagefiles.h  scanhistoryjob.cpp  scanhistoryjob.h  (+10 more)
src/history/: history.cpp  history.h  historybase.ui  historylistview.cpp  historylistview.h  historytab.cpp  historytab.h  mergebase.ui  mergelistview.cpp  mergelistview.h  mergetab.cpp  mergetab.h  packageemergetime.h
src/intro/: intro.ui  introdlg.cpp  introdlg.h
src/logs/: log.cpp  log.h  logsbase.ui  logstab.cpp  logstab.h
src/portage/: portage.cpp  portage.h  portagebase.ui  portagelistview.cpp  portagelistview.h  portagetab.cpp  portagetab.h  uninstallbase.ui  uninstallinspector.cpp  uninstallinspector.h
src/queue/: queue.cpp  queue.h  queuebase.ui  queuelistdelegate.cpp  queuelistdelegate.h  queuelistitem.cpp  queuelistitem.h  queuelistmodel.cpp  queuelistmodel.h  queuelistview.cpp  queuelistview.h  queuetab.cpp  queuetab.h
